// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TierSelect Snapshots > Dark Mode > renders disabled state 1`] = `
<div
  class="flex flex-col gap-2 "
>
  <label
    class="text-sm font-medium text-ink-700 dark:text-parchment-300"
  >
    Party Tier
  </label>
  <div
    aria-label="Party Tier Selection"
    class="flex flex-wrap gap-2 max-w-2xl"
    role="group"
  >
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-ink-100 border-ink-200 text-ink-400 cursor-not-allowed dark:bg-shadow-700 dark:border-shadow-600 dark:text-shadow-400
              "
      disabled=""
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 1
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Beginner
      </span>
    </button>
    <button
      aria-pressed="true"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-gold-100 border-gold-400 text-ink-900 shadow-gold-glow dark:bg-gold-900/40 dark:border-gold-500 dark:text-parchment-100
              "
      disabled=""
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 2
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Experienced
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-ink-100 border-ink-200 text-ink-400 cursor-not-allowed dark:bg-shadow-700 dark:border-shadow-600 dark:text-shadow-400
              "
      disabled=""
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 3
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Veteran
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-ink-100 border-ink-200 text-ink-400 cursor-not-allowed dark:bg-shadow-700 dark:border-shadow-600 dark:text-shadow-400
              "
      disabled=""
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 4
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Legendary
      </span>
    </button>
  </div>
</div>
`;

exports[`TierSelect Snapshots > Dark Mode > renders tier 1 selected 1`] = `
<div
  class="flex flex-col gap-2 "
>
  <label
    class="text-sm font-medium text-ink-700 dark:text-parchment-300"
  >
    Party Tier
  </label>
  <div
    aria-label="Party Tier Selection"
    class="flex flex-wrap gap-2 max-w-2xl"
    role="group"
  >
    <button
      aria-pressed="true"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-gold-100 border-gold-400 text-ink-900 shadow-gold-glow dark:bg-gold-900/40 dark:border-gold-500 dark:text-parchment-100
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 1
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Beginner
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-500 dark:text-parchment-200 dark:hover:bg-gold-900/20 dark:hover:border-gold-600
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 2
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Experienced
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-500 dark:text-parchment-200 dark:hover:bg-gold-900/20 dark:hover:border-gold-600
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 3
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Veteran
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-500 dark:text-parchment-200 dark:hover:bg-gold-900/20 dark:hover:border-gold-600
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 4
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Legendary
      </span>
    </button>
  </div>
</div>
`;

exports[`TierSelect Snapshots > Dark Mode > renders tier 4 selected 1`] = `
<div
  class="flex flex-col gap-2 "
>
  <label
    class="text-sm font-medium text-ink-700 dark:text-parchment-300"
  >
    Party Tier
  </label>
  <div
    aria-label="Party Tier Selection"
    class="flex flex-wrap gap-2 max-w-2xl"
    role="group"
  >
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-500 dark:text-parchment-200 dark:hover:bg-gold-900/20 dark:hover:border-gold-600
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 1
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Beginner
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-500 dark:text-parchment-200 dark:hover:bg-gold-900/20 dark:hover:border-gold-600
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 2
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Experienced
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-500 dark:text-parchment-200 dark:hover:bg-gold-900/20 dark:hover:border-gold-600
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 3
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Veteran
      </span>
    </button>
    <button
      aria-pressed="true"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-gold-100 border-gold-400 text-ink-900 shadow-gold-glow dark:bg-gold-900/40 dark:border-gold-500 dark:text-parchment-100
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 4
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Legendary
      </span>
    </button>
  </div>
</div>
`;

exports[`TierSelect Snapshots > Light Mode > renders disabled state 1`] = `
<div
  class="flex flex-col gap-2 "
>
  <label
    class="text-sm font-medium text-ink-700 dark:text-parchment-300"
  >
    Party Tier
  </label>
  <div
    aria-label="Party Tier Selection"
    class="flex flex-wrap gap-2 max-w-2xl"
    role="group"
  >
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-ink-100 border-ink-200 text-ink-400 cursor-not-allowed dark:bg-shadow-700 dark:border-shadow-600 dark:text-shadow-400
              "
      disabled=""
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 1
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Beginner
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-ink-100 border-ink-200 text-ink-400 cursor-not-allowed dark:bg-shadow-700 dark:border-shadow-600 dark:text-shadow-400
              "
      disabled=""
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 2
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Experienced
      </span>
    </button>
    <button
      aria-pressed="true"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-gold-100 border-gold-400 text-ink-900 shadow-gold-glow dark:bg-gold-900/40 dark:border-gold-500 dark:text-parchment-100
              "
      disabled=""
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 3
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Veteran
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-ink-100 border-ink-200 text-ink-400 cursor-not-allowed dark:bg-shadow-700 dark:border-shadow-600 dark:text-shadow-400
              "
      disabled=""
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 4
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Legendary
      </span>
    </button>
  </div>
</div>
`;

exports[`TierSelect Snapshots > Light Mode > renders tier 1 selected 1`] = `
<div
  class="flex flex-col gap-2 "
>
  <label
    class="text-sm font-medium text-ink-700 dark:text-parchment-300"
  >
    Party Tier
  </label>
  <div
    aria-label="Party Tier Selection"
    class="flex flex-wrap gap-2 max-w-2xl"
    role="group"
  >
    <button
      aria-pressed="true"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-gold-100 border-gold-400 text-ink-900 shadow-gold-glow dark:bg-gold-900/40 dark:border-gold-500 dark:text-parchment-100
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 1
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Beginner
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-500 dark:text-parchment-200 dark:hover:bg-gold-900/20 dark:hover:border-gold-600
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 2
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Experienced
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-500 dark:text-parchment-200 dark:hover:bg-gold-900/20 dark:hover:border-gold-600
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 3
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Veteran
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-500 dark:text-parchment-200 dark:hover:bg-gold-900/20 dark:hover:border-gold-600
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 4
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Legendary
      </span>
    </button>
  </div>
</div>
`;

exports[`TierSelect Snapshots > Light Mode > renders tier 2 selected 1`] = `
<div
  class="flex flex-col gap-2 "
>
  <label
    class="text-sm font-medium text-ink-700 dark:text-parchment-300"
  >
    Party Tier
  </label>
  <div
    aria-label="Party Tier Selection"
    class="flex flex-wrap gap-2 max-w-2xl"
    role="group"
  >
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-500 dark:text-parchment-200 dark:hover:bg-gold-900/20 dark:hover:border-gold-600
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 1
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Beginner
      </span>
    </button>
    <button
      aria-pressed="true"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-gold-100 border-gold-400 text-ink-900 shadow-gold-glow dark:bg-gold-900/40 dark:border-gold-500 dark:text-parchment-100
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 2
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Experienced
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-500 dark:text-parchment-200 dark:hover:bg-gold-900/20 dark:hover:border-gold-600
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 3
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Veteran
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex-1 min-w-[100px] max-w-[180px] flex flex-col items-center justify-center py-2 px-3
                rounded-fantasy border transition-all duration-200
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-500 dark:text-parchment-200 dark:hover:bg-gold-900/20 dark:hover:border-gold-600
              "
      type="button"
    >
      <span
        class="font-serif font-semibold"
      >
        Tier 4
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400"
      >
        Legendary
      </span>
    </button>
  </div>
</div>
`;
